Implement check ambient noise

--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="record_permission_title">Microphone permission required</string>
     <string name="record_permission_denied">Microphone permission is required to record audio. Please grant the permission.</string>
+    <string name="record_permission_denied_check_noise">Microphone permission is required to check ambient noise. Please grant the permission.</string>
 
     <string name="camera_permission_title">Camera permission required</string>
     <string name="camera_permission_denied">Camera permission is required to capture photos. Please grant the permission.</string>
